# HapticReferenceSoftware

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  t
.gitlab/: builds.yml  checks.yml  tests.yml
RM0_Decoder/: CMakeLists.txt
RM0_Decoder/src/: main.cpp
RM0_Encoder/: CMakeLists.txt
RM0_Encoder/include/: AhapEncoder.h  IOJson.h  IvsEncoder.h  PcmEncoder.h  WaveletEncoder.h
RM0_Encoder/src/: AhapEncoder.cpp  IOJson.cpp  IvsEncoder.cpp  PcmEncoder.cpp  WaveletEncoder.cpp  main.cpp
RM0_Encoder/test/: AhapEncoder.test.cpp  IvsEncoder.test.cpp  PcmEncoder.test.cpp  WaveletEncoder.test.cpp
ReferenceFiles/: IMMR-vib-DoubleTick.ivs  out.impg  test.ahap  test.ivs  test.out
cmake/: HJIF_specs.cmake  catch2.cmake  clang_tidy.cmake  dj_fft.cmake  dr_libs.cmake  iir.cmake  nlohmann_json.cmake  pugixml.cmake  rapidjson.cmake
diagrams/: Diagrams.pptx  RM0DecoderStructure.drawio  RM0EncoderStructure.drawio  RM0GeneralSoftwares.drawio  RM0HumanReadableFormat.puml  git_tree_model.drawio
diagrams/Class/: DataStructure.puml
diagrams/Sequence/: RM0EncoderSequenceDiagram.puml  RM0EncoderSequenceDiagram_ahap.puml  RM0EncoderSequenceDiagram_ivs.puml  RM0EncoderSequenceDiagram_ohm.puml  RM0EncoderSequenceDiagram_serialize.puml  RM0EncoderSequenceDiagram_wav.puml
diagrams/Sequence/Decoder/: RM0DecoderSequenceDiagram.puml  RM0EncoderSequenceDiagram.puml
diagrams/Sequence/Encoder/: RM0EncoderSequenceDiagram.puml  RM0EncoderSequenceDiagram_ahap.puml  RM0EncoderSequenceDiagram_ivs.puml  RM0EncoderSequenceDiagram_ohm.puml  RM0EncoderSequenceDiagram_serialize.puml  RM0EncoderSequenceDiagram_wav.puml
diagrams/Sequence/Synthesizer/: RM0SynthesizerSequenceDiagram.puml
diagrams/Sequence/style/: style.puml
doc/: building.md  coding_style.md  git.md  testing.md  usage.md
scripts/RM_submission/: config.json  conformance_check.py  conformance_config.json  submission_process.py
scripts/check/: clang_format.py
scripts/docker/: readme.md
scripts/docker/integration_tests/: Dockerfile  mpeg_ftp.json
scripts/test/: bitrate.py  conftest.py  integration_tests.py  psnr.py
scripts/tools/: check_data.py  csv_to_metrics.py  download_data.py
source/: CMakeLists.txt
source/Decoder/: CMakeLists.txt
source/Decoder/src/: main.cpp
source/Encoder/: CMakeLists.txt
source/Encoder/include/: AhapEncoder.h  IOJson.h  IvsEncoder.h  PcmEncoder.h  WaveletEncoder.h
source/Encoder/src/: AhapEncoder.cpp  IOJson.cpp  IvsEncoder.cpp  PcmEncoder.cpp  WaveletEncoder.cpp  main.cpp
source/Encoder/test/: AhapEncoder.test.cpp  IvsEncoder.test.cpp  PcmEncoder.test.cpp  WaveletEncoder.test.cpp
source/FilterBank/: CMakeLists.txt
source/FilterBank/include/: Filterbank.h  FourierTools.h  Wavelet.h
source/FilterBank/src/: Filterbank.cpp  FourierTools.cpp  Wavelet.cpp
source/FilterBank/test/: Filterbank.test.cpp  FourierTools.test.cpp  Wavelet.test.cpp
source/IOHaptics/: CMakeLists.txt
source/IOHaptics/include/: IOBinary.h  IOBinaryBands.h  IOBinaryFields.h  IOBinaryPrimitives.h  IOConformance.h  IOJson.h  IOJsonPrimitives.h  IOStream.h
source/IOHaptics/src/: IOBinary.cpp  IOBinaryBands.cpp  IOBinaryPrimitives.cpp  IOJson.cpp  IOJsonPrimitives.cpp  IOStream.cpp
source/IOHaptics/test/: IOBinary.test.cpp  IOBinaryBands.test.cpp  IOBinaryPrimitives.test.cpp  IOJson.test.cpp  IOStream.test.cpp
source/PsychohapticModel/: CMakeLists.txt
source/PsychohapticModel/include/: PsychohapticModel.h
source/PsychohapticModel/src/: PsychohapticModel.cpp
source/PsychohapticModel/test/: PsychohapticModel.test.cpp
source/Spiht/: CMakeLists.txt
source/Spiht/include/: ArithDec.h  ArithEnc.h  Spiht_Dec.h  Spiht_Enc.h
source/Spiht/src/: ArithDec.cpp  ArithEnc.cpp  Spiht_Dec.cpp  Spiht_Enc.cpp
source/Spiht/test/: ArithDec.test.cpp  ArithEnc.test.cpp  Spiht_Enc.test.cpp
source/Synthesizer/: CMakeLists.txt
source/Synthesizer/include/: Helper.h
source/Synthesizer/src/: Helper.cpp  main.cpp
source/Synthesizer/test/: Helper.test.cpp
source/Tools/: CMakeLists.txt
source/Tools/include/: InputParser.h  OHMData.h  Tools.h  WavParser.h
source/Tools/src/: InputParser.cpp  OHMData.cpp  PsychohapticModel.cpp  Tools.cpp  WavParser.cpp
source/Tools/test/: InputParser.test.cpp  OHMData.test.cpp  WavParser.test.cpp
source/Types/: CMakeLists.txt
source/Types/include/: Avatar.h  Band.h  BandType.h  BodyPartTarget.h  Channel.h  CurveType.h  Effect.h  EffectSemantic.h  EncodingModality.h  Haptics.h  IOBinary.h  IOBinaryPrimitives.h  IOJson.h  Keyframe.h  Perception.h  ReferenceDevice.h  Sync.h  Track.h
source/Types/src/: Avatar.cpp  Band.cpp  Channel.cpp  Effect.cpp  Haptics.cpp  IOBinary.cpp  IOBinaryPrimitives.cpp  IOJson.cpp  Keyframe.cpp  Perception.cpp  ReferenceDevice.cpp  Sync.cpp  Track.cpp
source/Types/test/: Avatar.test.cpp  Band.test.cpp  Channel.test.cpp  Effect.test.cpp  Haptics.test.cpp  Keyframe.test.cpp  Perception.test.cpp  ReferenceDevice.test.cpp  Track.test.cpp
source/WaveletDecoder/: CMakeLists.txt
source/WaveletDecoder/include/: WaveletDecoder.h
source/WaveletDecoder/src/: WaveletDecoder.cpp
source/WaveletDecoder/test/: WaveletDecoder.test.cpp
test/: list_files.md5  psnr_2k.json  test.gltf  test.ohm
tools/: CMakeLists.txt
tools/include/: InputParser.h  OHMData.h  Point.h  Tools.h  WavParser.h
tools/src/: Filterbank.cpp  Filterbank.h  Filterbank.test.cpp  InputParser.cpp  InputParser.h  InputParser.test.cpp  OHMData.cpp  OHMData.test.cpp  PsychohapticModel.cpp  PsychohapticModel.h  PsychohapticModel.test.cpp  Tools.h  WavParser.cpp  WavParser.h  WavParser.test.cpp  Wavelet.cpp  Wavelet.h  Wavelet.test.cpp
tools/test/: InputParser.test.cpp  WavParser.test.cpp
types/include/: Avatar.h  Band.h  Effect.h  Haptics.h  Keyframe.h  Note.h  Track.h
types/src/: Band.cpp  Effect.cpp  Haptics.cpp  Keyframe.cpp  Note.cpp  Perception.cpp  ReferenceDevice.cpp  Track.cpp
types/test/: Avatar.test.cpp  Band.test.cpp  Effect.test.cpp  Keyframe.test.cpp  Note.test.cpp  Perception.test.cpp
